--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /MongoDBDemoApp/.vs/MongoDBDemoApp/v16/Server/sqlite3/db.lock
+/MongoDBDemoApp/.vs/MongoDBDemoApp/v16/Server/sqlite3
